# aia

./: .gitignore  .impeccable.md  AGENTS.md  Cargo.toml  README.md  flake.nix  hello.py  justfile  skills-lock.json
VoiceInput/: Cargo.toml
VoiceInput/src/: audio.rs  config.rs  input_method.rs  keyboard.rs  llm.rs  main.rs  whisper.rs
VoiceInput/src/ui/: floating_window.rs  menu.rs  mod.rs  settings_dialog.rs  style.css
apps/agent-cli/: Cargo.toml
apps/agent-cli/src/: app.rs  driver.rs  errors.rs  loop_driver.rs  main.rs  model.rs  provider_setup.rs  theme.rs  tui.rs  tui_markdown.rs  tui_timeline.rs
apps/agent-server/: Cargo.toml
apps/agent-server/src/: bootstrap.rs  channel_host.rs  channel_runtime.rs  cli.rs  lib.rs  main.rs  model.rs  reasoning.rs  routes.rs  runtime_worker.rs  self_chat.rs  server.rs  session_manager.rs  sse.rs  state.rs
apps/agent-server/src/bootstrap/: mod.rs  startup.rs
apps/agent-server/src/channel_host/: host.rs  mapping.rs  mod.rs  runtime.rs  tests.rs
apps/agent-server/src/cli/: mod.rs
apps/agent-server/src/model/: bootstrap.rs  factory.rs  mod.rs  runner.rs  tests.rs  trace.rs
apps/agent-server/src/routes/: channel.rs  channel_event.rs  common.rs  mod.rs  provider.rs  session.rs  test_support.rs  tests.rs  trace.rs  turn.rs
apps/agent-server/src/routes/channel/: config.rs  dto.rs  handlers.rs  mod.rs  mutation.rs  tests.rs
apps/agent-server/src/routes/diff/: handlers.rs  highlighting.rs  mod.rs
apps/agent-server/src/routes/provider/: dto.rs  handlers.rs  mod.rs  tests.rs
apps/agent-server/src/routes/session/: dto.rs  handlers.rs  mod.rs
apps/agent-server/src/routes/trace/: dto.rs  handlers.rs  mod.rs  tests.rs
apps/agent-server/src/routes/turn/: dto.rs  handlers.rs  mod.rs  tests.rs
apps/agent-server/src/runtime_worker/: mod.rs  projection.rs  snapshots.rs  tests.rs  types.rs
apps/agent-server/src/self_chat/: commands.rs  mod.rs  prompt.rs  session.rs
apps/agent-server/src/server/: mod.rs
apps/agent-server/src/session_manager/: auto_rename.rs  current_turn.rs  handle.rs  message_queue.rs  mod.rs  prompt.rs  provider_sync.rs  query_ops.rs  question_tool_bridge.rs  server_question_tool.rs  server_runtime_tool_host.rs  tests.rs  tool_trace.rs  turn_execution.rs  types.rs
apps/agent-server/src/sse/: mod.rs
apps/agent-server/src/state/: mod.rs
apps/agent-server/tests/bootstrap/: mod.rs
apps/agent-server/tests/channel_host/: mod.rs
apps/agent-server/tests/cli/: mod.rs
apps/agent-server/tests/model/: mod.rs
apps/agent-server/tests/reasoning/: mod.rs
apps/agent-server/tests/routes/: support.rs
apps/agent-server/tests/routes/channel/: mod.rs
apps/agent-server/tests/routes/common/: mod.rs
apps/agent-server/tests/routes/provider/: mod.rs
apps/agent-server/tests/routes/session/: mod.rs
apps/agent-server/tests/runtime_worker/: mod.rs
apps/agent-server/tests/server/: mod.rs
apps/agent-server/tests/session_manager/: mod.rs
apps/agent-server/tests/sse/: mod.rs
apps/agent-server/themes/: github-dark.tmTheme  github-light.tmTheme
crates/agent-core/: Cargo.toml
crates/agent-core/src/: completion.rs  conversation.rs  error.rs  interaction.rs  lib.rs  question.rs  registry.rs  streaming.rs  tests.rs  tooling.rs  traits.rs  widget.rs
crates/agent-core/tests/: tool_args_schema_compile_fail.rs
crates/agent-core/tests/lib/: mod.rs
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: hooks.rs  lib.rs  runtime.rs  types.rs
crates/agent-runtime/src/runtime/: compress.rs  error.rs  events.rs  finalize.rs  helpers.rs  hooks.rs  question_tool.rs  question_tool_runtime.rs  request.rs  runtime_context_bridge.rs  runtime_tool_context_adapter.rs  tape_tools.rs  tests.rs  tool_calls.rs  turn.rs
crates/agent-runtime/tests/runtime/: mod.rs
crates/builtin-tools/: Cargo.toml
crates/builtin-tools/src/: apply_patch.rs  bash.rs  codesearch.rs  edit.rs  edit_file.rs  exa.rs  glob.rs  grep.rs  lib.rs  question.rs  read.rs  read_file.rs  shell.rs  tape.rs  walk.rs  websearch.rs  widget.rs  write.rs  write_file.rs
crates/builtin-tools/src/shell/: capture.rs  execution.rs  tests.rs
crates/builtin-tools/tests/apply_patch/: mod.rs
crates/builtin-tools/tests/codesearch/: mod.rs
crates/builtin-tools/tests/edit/: mod.rs
crates/builtin-tools/tests/glob/: mod.rs
crates/builtin-tools/tests/grep/: mod.rs
crates/builtin-tools/tests/lib/: mod.rs
crates/builtin-tools/tests/read/: mod.rs
crates/builtin-tools/tests/shell/: mod.rs
crates/builtin-tools/tests/websearch/: mod.rs
crates/builtin-tools/tests/widget/: mod.rs
crates/builtin-tools/tests/write/: mod.rs
crates/channel-bridge/: Cargo.toml
crates/channel-bridge/src/: error.rs  lib.rs  profile_registry.rs  runtime.rs  session.rs
crates/channel-bridge/tests/profile_registry/: mod.rs
crates/channel-bridge/tests/runtime/: mod.rs
crates/channel-bridge/tests/session/: mod.rs
crates/channel-feishu/: Cargo.toml
crates/channel-feishu/src/: lib.rs  runtime.rs
crates/channel-feishu/src/runtime/: card.rs  config.rs  protocol.rs  tests.rs
crates/channel-feishu/tests/runtime/: mod.rs
crates/channel-weixin/: Cargo.toml
crates/channel-weixin/src/: config.rs  lib.rs  runtime.rs
crates/channel-weixin/tests/runtime/: mod.rs
crates/openai-adapter/: Cargo.toml
crates/openai-adapter/src/: chat_completions.rs  error.rs  http.rs  lib.rs  mapping.rs  payloads.rs  responses.rs  retry.rs  streaming.rs  tests.rs
crates/openai-adapter/src/chat_completions/: client.rs  mod.rs  parsing.rs  payloads.rs  request.rs  streaming.rs
crates/openai-adapter/src/responses/: client.rs  mod.rs  parsing.rs  payloads.rs  request.rs  streaming.rs
crates/openai-adapter/tests/chat_completions/: parsing.rs
crates/openai-adapter/tests/lib/: mod.rs
crates/openai-adapter/tests/responses/: parsing.rs
crates/openai-adapter/tests/streaming/: mod.rs
crates/weixin-client/: Cargo.toml
crates/weixin-client/src/: client.rs  config.rs  error.rs  lib.rs  media.rs  protocol.rs
crates/weixin-client/tests/: client.rs  media.rs
docs/: a.json  a.md  (+17 more)
(+285 files in other folders)
