[workspace]
members = [
  "apps/agent-cli",
  "apps/agent-server",
  "crates/agent-core",
  "crates/agent-runtime",
  "crates/builtin-tools",
  "crates/openai-adapter",
  "crates/provider-registry",
  "crates/session-tape",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
