[package]
name = "agent-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../../crates/agent-core" }
agent-runtime = { path = "../../crates/agent-runtime" }
openai-adapter = { path = "../../crates/openai-adapter" }
provider-registry = { path = "../../crates/provider-registry" }
session-tape = { path = "../../crates/session-tape" }
crossterm = "0.28"
pulldown-cmark = "0.12"
ratatui = "0.29"

[[bin]]
name = "aia"
path = "src/main.rs"
