[package]
name = "agent-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aia-config = { path = "../../crates/aia-config" }
agent-core = { path = "../../crates/agent-core" }
agent-core-macros = { path = "../../crates/agent-core-macros" }
agent-prompts = { path = "../../crates/agent-prompts" }
agent-runtime = { path = "../../crates/agent-runtime" }
builtin-tools = { path = "../../crates/builtin-tools" }
agent-store = { path = "../../crates/agent-store" }
channel-bridge = { path = "../../crates/channel-bridge" }
channel-feishu = { path = "../../crates/channel-feishu" }
channel-weixin = { path = "../../crates/channel-weixin" }
weixin-client = { path = "../../crates/weixin-client" }
openai-adapter = { path = "../../crates/openai-adapter" }
provider-registry = { path = "../../crates/provider-registry" }
session-tape = { path = "../../crates/session-tape" }
async-trait = "0.1"
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
similar = "2"
time = { version = "0.3", features = ["formatting", "local-offset"] }
tree-sitter = "0.26.8"
tree-sitter-highlight = "0.26.8"
tree-sitter-css = "0.25.0"
tree-sitter-html = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"

[[bin]]
name = "agent-server"
path = "src/main.rs"
