[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
agent-prompts = { path = "../agent-prompts" }
session-tape = { path = "../session-tape" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
path = "src/lib.rs"
