[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aia-config = { path = "../aia-config" }
agent-core = { path = "../agent-core" }
agent-prompts = { path = "../agent-prompts" }
session-tape = { path = "../session-tape" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time"] }

[lib]
path = "src/lib.rs"
