[package]
name = "builtin-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
async-trait = "0.1"
brush-builtins = "0.1"
brush-core = "0.4"
schemars = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["fs", "io-util", "rt", "sync", "time"] }
globset = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[lib]
path = "src/lib.rs"
