[package]
name = "channel-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
agent-prompts = { path = "../agent-prompts" }
agent-runtime = { path = "../agent-runtime" }
agent-store = { path = "../agent-store" }
channel-registry = { path = "../channel-registry" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[lib]
path = "src/lib.rs"
