[package]
name = "weixin-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes = "0.8"
base64 = "0.22"
cipher = { version = "0.4", features = ["block-padding"] }
ecb = "0.1"
getrandom = "0.3"
md-5 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "time", "fs"] }

[lib]
path = "src/lib.rs"
